<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="16dp">

            <Switch
                android:id="@+id/dds_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DDS" />

            <TextView
                android:id="@+id/dds_mode_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/DDS_Mode" />

            <Spinner
                android:id="@+id/dds_mode_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/DDS_Mode" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dds_wave_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Wave" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/dds_wave_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Wave" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dds_vpp_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Amplitude" />

                <com.vimu.aardemo.EditSpinnerVolt
                    android:id="@+id/dds_vpp_Number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dds_bias_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Bias" />

                <com.vimu.aardemo.EditSpinnerVolt
                    android:id="@+id/dds_bias_Number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dds_freq_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Freq" />

                <com.vimu.aardemo.EditSpinnerFreq
                    android:id="@+id/dds_freq_Number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <com.vimu.aardemo.MeterView
                android:id="@+id/meterView"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#000" />

            <Switch
                android:id="@+id/meter_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Multimeter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/meter_btn_vdc"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="V(DC)" />

                <Button
                    android:id="@+id/meter_btn_mvdc"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="mV(DC)" />

                <Button
                    android:id="@+id/meter_btn_om"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="Ω" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/meter_btn_vac"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="V(AC)" />

                <Button
                    android:id="@+id/meter_btn_mvac"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="mV(AC)" />

                <Button
                    android:id="@+id/meter_btn_cap"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="@string/Capacitance" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/meter_btn_adc"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="A(DC)" />

                <Button
                    android:id="@+id/meter_btn_madc"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="mA(DC)" />

                <Button
                    android:id="@+id/meter_btn_ejg"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="@string/Diode" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/meter_btn_aac"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="A(AC)" />

                <Button
                    android:id="@+id/meter_btn_maac"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="mA(AC)" />

                <Button
                    android:id="@+id/meter_btn_td"
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="wrap_content"
                    android:text="@string/On_Off" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="2">

                <com.vimu.aardemo.ScopeView
                    android:id="@+id/scopeView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:background="#000" />

                <TextView
                    android:id="@+id/text_info"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scrollbars="vertical"
                    android:text="@string/PleaseConnectUsb" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/osc_range_minmv_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RangeMin" />

                <com.vimu.aardemo.EditSpinnerVolt
                    android:id="@+id/osc_range_minmv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/osc_range_maxmv_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RangeMax" />

                <com.vimu.aardemo.EditSpinnerVolt
                    android:id="@+id/osc_range_maxmv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/osc_sample_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/Samples" />

                <Spinner
                    android:id="@+id/osc_sample_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/Samples" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/osc_capture_length_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/LengthK" />

                <com.vimu.aardemo.EditSpinnerKb
                    android:id="@+id/osc_capture_length"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/osc_capture_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Capture" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/trigger_mode_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Trigger_Mode" />

            <Spinner
                android:id="@+id/trigger_mode_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/trigger_source_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Trigger_Source" />

            <Spinner
                android:id="@+id/trigger_source_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/trigger_style_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Trigger_Style" />

            <Spinner
                android:id="@+id/trigger_style_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trigger_Level_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Trigger_Level" />

                <com.vimu.aardemo.EditSpinnerVolt
                    android:id="@+id/trigger_Level_Number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trigger_Sensitivity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Trigger_Sensitivity" />

                <Spinner
                    android:id="@+id/trigger_Sensitivity_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"/>

                <TextView
                    android:id="@+id/trigger_Sensitivity_Static_editTextNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Div" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/trigger_Front_Percent_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Trigger_Front_Percent" />

                <com.vimu.aardemo.EditTextRange
                    android:id="@+id/trigger_Front_Percent_editTextNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:autofillHints="50"
                    android:text="50"
                    android:ems="5"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/trigger_Front_Percent_Static_editTextNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Percent" />
            </LinearLayout>

            <Button
                android:id="@+id/osc_trigger_force"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TriggerFroce" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>